fixed some alignments on homepage, changed list to div so it's not stacked

--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,12 @@ h1 {
 
 .nav {
     list-style: none;
-    display: inline-block;
+    display: flex;
     padding: 0;
     margin: 0;
     gap: 20px;
+    justify-content: center;
+   
 }
 
 .ingredients {
